--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,21 +1,31 @@
 :root {
+  /* Colors */
   --color-beige: #F0E8E2;
+  --color-burnt-orange: #9d4e32;
   --color-green: #193617;
+  --color-foreground: var(--color-green);
+  --color-background: var(--color-beige);
+
+  /* Typography */
   --font-size-body: 0.875rem;
   --overline-letter-spacing: 0.05ch;
   --page-margin: 1.5rem;
 
+  /* Layout */
   --page-width-contained: 64rem;
+  --section-padding-vertical: clamp(4rem, 12vh, 8rem);
 
+  /* Transitions */
   --duration-fast: 0.15s;
   --duration-medium: 0.35s;
   --duration-slow: 0.5s;
 
+  /* Easing */
   --ease-out-1: cubic-bezier(0.9, 0.5, 0, 1);
 
-  --section-padding-vertical: 10rem;
-
-  @media (width <= 768px) {
+  /* Mobile */
+  @media (width <=768px) {
+    /* Layout */
     --section-padding-vertical: 6rem;
   }
 }
@@ -34,6 +44,8 @@ html {
 }
 
 body {
+  color: var(--color-foreground);
+  background-color: var(--color-background);
   font-family: var(--font-gambarino), serif;
   font-weight: 400;
 }
@@ -62,6 +74,28 @@ p {
 
 p + p {
   margin-top: 1rem;
+}
+
+/* Color Schemes */
+
+[data-color-scheme] {
+  color: var(--color-foreground);
+  background-color: var(--color-background);
+}
+
+[data-color-scheme="1"] {
+  --color-foreground: var(--color-green);
+  --color-background: var(--color-beige);
+}
+
+[data-color-scheme="2"] {
+  --color-foreground: var(--color-beige);
+  --color-background: var(--color-green);
+}
+
+[data-color-scheme="3"] {
+  --color-foreground: var(--color-beige);
+  --color-background: var(--color-burnt-orange);
 }
 
 /* Typography */
@@ -96,7 +130,7 @@ h1,h2,h3,h4,h5,h5 {
   z-index: -1;
   bottom: 0;
   text-transform: none;
-  color: color-mix(in srgb, var(--color-beige) 80%, var(--color-green));
+  color: color-mix(in srgb, var(--color-background) 80%, var(--color-foreground));
   opacity: 0.5;
   white-space: nowrap;
 
@@ -109,10 +143,16 @@ h1,h2,h3,h4,h5,h5 {
   margin-bottom: 6rem;
 }
 
-.section-split {
+/* Layout */
+
+[data-container="contained"] > div {
   max-width: var(--page-width-contained);
   margin-inline: auto;
   padding-inline: var(--page-margin);
+  padding-block: var(--section-padding-vertical);
+}
+
+[data-layout="split"] {
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 1fr;
@@ -123,11 +163,18 @@ h1,h2,h3,h4,h5,h5 {
     flex-direction: column;
     gap: 4rem;
 
-    & > * {
+    &>* {
       width: 100%;
     }
   }
 }
+
+.non-sticky-sections {
+  position: relative;
+  z-index: 1;
+}
+
+/* Links */
 
 .link-underline {
   position: relative;
